Adding config page (restructure of personal data logic) and worker

--- a/extension/logo/default_popup.html
+++ b/extension/logo/default_popup.html
@@ -4,14 +4,6 @@
   <meta charset="UTF-8">
 </head>
 <body>
-    <form method="post" class="subscription">
-        <div class="subscription-inner">
-            <label class="subscription-label" for="subscription-tag">Leave a short message</label>
-            <input class="subscription-tag" placeholder="placeholder" value="placeholder" required id="subscription-tag">
-            <button class="button subscription-button" type="submit">Submit</button>
-        </div>
-    </form>
-    <textarea></textarea>
-    <script src="./popup.js" type="module"></script>
+    <p>SubLive</p>
 </body>
 </html>
