Adding bot ref in config page

--- a/extension/config_page/config_page.html
+++ b/extension/config_page/config_page.html
@@ -15,6 +15,11 @@
             <input class="tg-tag" required id="tg-tag" placeholder="@your_tag">
             <button class="tg-tag-submit-button" type="submit">Update tag</button>
         </div>
+        <h2 class="innerDiv">Extra Data</h2>
+        <div class="innerDiv">
+            <label>Click <a href="https://t.me/sublive_training_bot">here</a> to visit our Telegram Bot for words
+            training.</label>
+        </div>
     </div>
     <script  src="./config_page.js" type="module"></script>
 </body>
